--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMDMJWzLzW1Lu//2fHvyOMo",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,13 +18,23 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Forson12/CEM300-Natural-Language-Processing-Coursework/blob/main/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#CEM300-Natural-Language-Processing-Coursework\n",
         "\n",
         "In this work, I explore the Product Classification and Clustering Dataset.\n",
         "\n",
         "<br>\n",
-        "Sources:\n",
+        "Sources && Frameworks:\n",
         "\n",
         "Dataset Chosen - https://archive.ics.uci.edu/dataset/837/product+classification+and+clustering\n",
         "\n",
@@ -37,7 +49,19 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "The first task is to implement"
+        "--\n",
+        "##Task 1: Implementing the kNN Algorithm\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "The following task will depict the process of building an implementation using scikit-learn framework on the Product Dataset.\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "####Task 1.1: Loading the the Product Classification and Clustering Dataset\n",
+        "\n",
+        "\n",
+        "The first task will be to load the dataset."
       ],
       "metadata": {
         "id": "5iiLHysUH-ZS"
