--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDMJWzLzW1Lu//2fHvyOMo",
+      "authorship_tag": "ABX9TyMg2KUvEi/MjqZXcM3ntHp2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import io\n",
+        "from google.colab import files\n",
+        "\n",
+        "uploaded = files.upload()"
+      ],
       "metadata": {
         "id": "TpPg2wdMD90M"
       },
