Loaded the price runner dataset and start storing in data frames

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ4zPjVGGD0Vet3MLsUyrN",
+      "authorship_tag": "ABX9TyMjZCyjHV5y7/DK2yhtcDfq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "\n",
         "<br>\n",
         "\n",
-        "####Task 1.1: Loading the the Product Classification and Clustering Dataset\n",
+        "####Task 1.1: Loading the the Price Runner Dataset\n",
         "\n",
         "\n",
         "The first task will be to load the dataset."
@@ -84,7 +84,7 @@
         },
         "outputId": "261b892d-319e-454f-e394-94efd2b6ae57"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -284,14 +284,107 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "KDezaXXZD0dv"
+        "id": "KDezaXXZD0dv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dac2a60c-0851-4c29-878f-addd87c7802a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                0                                                  1  \\\n",
+            "0      Product ID                                      Product Title   \n",
+            "1               1                    apple iphone 8 plus 64gb silver   \n",
+            "2               2                apple iphone 8 plus 64 gb spacegrau   \n",
+            "3               3  apple mq8n2b/a iphone 8 plus 64gb 5.5 12mp sim...   \n",
+            "4               4                apple iphone 8 plus 64gb space grey   \n",
+            "...           ...                                                ...   \n",
+            "35307       47350  smeg fab28 60cm retro style right hand hinge f...   \n",
+            "35308       47351  smeg fab28 60cm retro style left hand hinge fr...   \n",
+            "35309       47352  smeg fab28 60cm retro style left hand hinge fr...   \n",
+            "35310       47355     candy 60cm built under larder fridge cru160nek   \n",
+            "35311       47358           neff k4316x7gb built under larder fridge   \n",
+            "\n",
+            "                  2            3                         4             5  \\\n",
+            "0       Merchant ID   Cluster ID             Cluster Label   Category ID   \n",
+            "1                 1            1  Apple iPhone 8 Plus 64GB          2612   \n",
+            "2                 2            1  Apple iPhone 8 Plus 64GB          2612   \n",
+            "3                 3            1  Apple iPhone 8 Plus 64GB          2612   \n",
+            "4                 4            1  Apple iPhone 8 Plus 64GB          2612   \n",
+            "...             ...          ...                       ...           ...   \n",
+            "35307            59        47517          Smeg FAB28 Cream          2623   \n",
+            "35308            59        47518            Smeg FAB28 Red          2623   \n",
+            "35309            59        47519           Smeg FAB28 Pink          2623   \n",
+            "35310           125        47524             Candy CRU16.0          2623   \n",
+            "35311           179        47525                Neff K4316          2623   \n",
+            "\n",
+            "                     6  \n",
+            "0       Category Label  \n",
+            "1        Mobile Phones  \n",
+            "2        Mobile Phones  \n",
+            "3        Mobile Phones  \n",
+            "4        Mobile Phones  \n",
+            "...                ...  \n",
+            "35307          Fridges  \n",
+            "35308          Fridges  \n",
+            "35309          Fridges  \n",
+            "35310          Fridges  \n",
+            "35311          Fridges  \n",
+            "\n",
+            "[35312 rows x 7 columns]\n"
+          ]
+        }
+      ],
       "source": [
-        "product_file = io.BytesIO"
+        "product_file = io.BytesIO(uploaded['pricerunner_aggregate.csv'])\n",
+        "product_df = pd.read_csv(product_file, header=None)\n",
+        "print(product_df)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The dataframe tells us a lot of useful information about the price runner dataset just uploaded.\n",
+        "Examples include:\n",
+        "1. There are 7 columns (6 features and 11 unique labels)\n",
+        "2. 35312 rows (as there is no header, this means there are 35312 examples in this dataset)\n",
+        "3. It has Columns including: Product ID, Merchant ID etc."
+      ],
+      "metadata": {
+        "id": "NbiWWLHDSDl7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next we will store the data in dataframes. This is particularly useful because it has inbuilt functionality to help us deal with missing values.\n",
+        "\n",
+        "For this, I will convert the dataframe to an array to amke things cleaner and clearer."
+      ],
+      "metadata": {
+        "id": "Pp2DFFU3Uoli"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rDLI1ILuSDQ9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "b3QddHt3SCvR"
+      }
     }
   ]
 }
