Summary of what's going to be done in Task 2 for section 2 - representation learning

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxnCXp1qcZGlSNPEuEQMrg",
+      "authorship_tag": "ABX9TyM3u5D9J0kDd6VxA5h3Rkp1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1014,6 +1014,25 @@
       ],
       "metadata": {
         "id": "z4qi4uOzITkX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Task 2 – Representation Learning\n",
+        "\n",
+        "To perform clustering, the cleaned product titles must be converted into numeric vectors that capture word importance.  \n",
+        "Here the **TF-IDF (Term Frequency - Inverse Document Frequency)** method is used.  \n",
+        "TF-IDF assigns higher values to words that appear frequently within one title but are less common across the dataset.  \n",
+        "This helps emphasise unique identifiers such as brand and model numbers while reducing the weight of very common terms.\n",
+        "\n",
+        "TF-IDF is efficient and interpretable for short text, making it suitable for grouping similar products.  \n",
+        "Each product title becomes a sparse vector representing the strength of its key tokens.  \n",
+        "These vectors form the numerical feature space on which unsupervised algorithms—such as *k-means*—can measure distance and identify clusters.  \n",
+        "This representation follows best practice from standard NLP pipelines and serves as a solid baseline before exploring more advanced embeddings like Word2Vec or BERT.\n"
+      ],
+      "metadata": {
+        "id": "GwX-OpiSLe4G"
       }
     },
     {
