feat: implement Section 2 representation learning using TF-IDF on cleaned product titles

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3u5D9J0kDd6VxA5h3Rkp1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO3VamSqVFtFfnVnR8xoq64",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +98,7 @@
         },
         "outputId": "31329497-4b4c-45f2-e7e6-a5d99d98968a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "KDezaXXZD0dv",
         "colab": {
@@ -555,7 +556,7 @@
         "id": "4T3vuDjLuLrr",
         "outputId": "f7c30e15-94e5-4f12-ff27-bffdc02059c1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +608,7 @@
         "id": "AUZJd1fYtOFC",
         "outputId": "0c3eb2b6-24be-4fb0-8c1f-6b862f873c0f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,7 +668,7 @@
           "height": 410
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1037,12 +1038,57 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# -------------------------------------------------------------\n",
+        "# Section 2 - Representation Learning\n",
+        "# -------------------------------------------------------------\n",
+        "# In clustering we need numeric features to compare similarity.\n",
+        "# TF-IDF (Term Frequency – Inverse Document Frequency) converts\n",
+        "# cleaned text into numeric vectors showing how important each\n",
+        "# word is across all product titles.\n",
+        "# -------------------------------------------------------------\n",
+        "\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer   # import TF-IDF tool\n",
+        "\n",
+        "# create TF-IDF vectoriser\n",
+        "# max_features limits how many words are kept (for efficiency)\n",
+        "vectoriser = TfidfVectorizer(max_features=5000)\n",
+        "\n",
+        "# fit the vectoriser on the cleaned titles and transform to matrix\n",
+        "X_tfidf = vectoriser.fit_transform(product_df[\"Clean_Title\"])\n",
+        "\n",
+        "# show size of the resulting matrix (rows = products, cols = words)\n",
+        "print(\"TF-IDF matrix shape:\", X_tfidf.shape)\n",
+        "\n",
+        "# print out the first few feature names\n",
+        "print(\"Sample features:\", vectoriser.get_feature_names_out()[:15])\n"
+      ],
+      "metadata": {
+        "id": "00UaVadzITVs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83eacf00-0eb9-41e1-ad8a-9de92831de9c"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TF-IDF matrix shape: (35312, 5000)\n",
+            "Sample features: ['00' '001' '00ghz' '01' '02' '02m' '03m' '05' '06' '06ghz' '0cf' '0ghz'\n",
+            " '0in' '0inch' '0lcd']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "00UaVadzITVs"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "VUPpDJpRcEMr"
+      }
     }
   ]
 }
