Finishing up section 2, cleaning up and getting ready to implement section 3

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO3VamSqVFtFfnVnR8xoq64",
+      "authorship_tag": "ABX9TyNtz9+bbOTqv9RZfHHLg+WR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -662,21 +662,22 @@
       ],
       "metadata": {
         "id": "1qU3qYUIqq20",
-        "outputId": "5a77d485-8636-41da-ad76-730e47584491",
+        "outputId": "5a77109e-fbb3-4a1d-e0bb-55097d832be6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 410
+          "height": 427
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n"
           ]
         },
         {
@@ -709,7 +710,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a32e1f77-6917-49f8-ad3c-328ffba0e29a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a21d5f09-ba0e-4074-a5a3-73f386dce478\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -789,7 +790,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a32e1f77-6917-49f8-ad3c-328ffba0e29a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a21d5f09-ba0e-4074-a5a3-73f386dce478')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -841,12 +842,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a32e1f77-6917-49f8-ad3c-328ffba0e29a button.colab-df-convert');\n",
+              "        document.querySelector('#df-a21d5f09-ba0e-4074-a5a3-73f386dce478 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a32e1f77-6917-49f8-ad3c-328ffba0e29a');\n",
+              "        const element = document.querySelector('#df-a21d5f09-ba0e-4074-a5a3-73f386dce478');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -866,8 +867,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-23eee195-d3bb-4c7d-a601-f7381a132e45\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-23eee195-d3bb-4c7d-a601-f7381a132e45')\"\n",
+              "    <div id=\"df-1223c67b-8d74-4309-977a-5bb143e7bb00\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1223c67b-8d74-4309-977a-5bb143e7bb00')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -986,7 +987,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-23eee195-d3bb-4c7d-a601-f7381a132e45 button');\n",
+              "            document.querySelector('#df-1223c67b-8d74-4309-977a-5bb143e7bb00 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1002,7 +1003,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 24
         }
       ]
     },
@@ -1020,7 +1021,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Task 2 – Representation Learning\n",
+        "## Task 2 - Representation Learning\n",
         "\n",
         "To perform clustering, the cleaned product titles must be converted into numeric vectors that capture word importance.  \n",
         "Here the **TF-IDF (Term Frequency - Inverse Document Frequency)** method is used.  \n",
@@ -1030,7 +1031,8 @@
         "TF-IDF is efficient and interpretable for short text, making it suitable for grouping similar products.  \n",
         "Each product title becomes a sparse vector representing the strength of its key tokens.  \n",
         "These vectors form the numerical feature space on which unsupervised algorithms—such as *k-means*—can measure distance and identify clusters.  \n",
-        "This representation follows best practice from standard NLP pipelines and serves as a solid baseline before exploring more advanced embeddings like Word2Vec or BERT.\n"
+        "\n",
+        "In clustering we need numeric features to compare similarity. TF-IDF converts cleaned text into numeric vectors showing how important each word is across all product titles and this what I have applied to the the Clean Titke below.\n"
       ],
       "metadata": {
         "id": "GwX-OpiSLe4G"
@@ -1039,15 +1041,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# -------------------------------------------------------------\n",
-        "# Section 2 - Representation Learning\n",
-        "# -------------------------------------------------------------\n",
-        "# In clustering we need numeric features to compare similarity.\n",
-        "# TF-IDF (Term Frequency – Inverse Document Frequency) converts\n",
-        "# cleaned text into numeric vectors showing how important each\n",
-        "# word is across all product titles.\n",
-        "# -------------------------------------------------------------\n",
-        "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer   # import TF-IDF tool\n",
         "\n",
         "# create TF-IDF vectoriser\n",
@@ -1082,6 +1075,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ----------------------------------------------------\n",
+        "# 3. Section 3: Algorithms\n",
+        "# ----------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "p2f6vXGRZh3s"
+      }
     },
     {
       "cell_type": "markdown",
