Overview and Introduction to Section 3: Algorithms Task 3.1 almost done

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtz9+bbOTqv9RZfHHLg+WR",
+      "authorship_tag": "ABX9TyN2A9BgTJUy424MtSgD4Xuy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -668,7 +668,7 @@
           "height": 427
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1063,7 @@
         },
         "outputId": "83eacf00-0eb9-41e1-ad8a-9de92831de9c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,9 +1089,79 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "This section compares two unsupervised clustering models on TF-IDF vectors of product titles: K-Means and Agglomerative (Hierarchical) Clustering, followed by low-dimensional visualisation using truncated SVD (PCA for sparse text). The choices reflect best practice for short-text clustering: scalable, distance-based methods on sparse, high-dimensional features."
+      ],
+      "metadata": {
+        "id": "MLGcrVGi2ma8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Task 3.1: K-Means clustering on TF-IDF vectors\n",
+        "# -------------------------------------------------------------"
+      ],
       "metadata": {
         "id": "VUPpDJpRcEMr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.cluster import KMeans\n",
+        "\n",
+        "# choose number of clusters (will be tuned/justified in Section 4)\n",
+        "k = 25\n",
+        "\n",
+        "# k-means with sensible defaults for text\n",
+        "kmeans = KMeans(\n",
+        "    n_clusters=k,\n",
+        "    init=\"k-means++\",\n",
+        "    n_init=10,\n",
+        "    max_iter=300,\n",
+        "    random_state=42\n",
+        ")\n",
+        "\n",
+        "# fit on TF-IDF matrix (X_tfidf from Section 2)\n",
+        "kmeans_labels = kmeans.fit_predict(X_tfidf)\n",
+        "\n",
+        "# quick sanity checks\n",
+        "import numpy as np\n",
+        "unique, counts = np.unique(kmeans_labels, return_counts=True)\n",
+        "print(\"K-Means clusters and sizes:\", dict(zip(unique, counts)))\n",
+        "print(\"Inertia (within-cluster SSE):\", kmeans.inertia_)\n"
+      ],
+      "metadata": {
+        "id": "wzz2UM5U2Su0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## I\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3Tjgh0753Jm_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "r-CK6_pB3JTa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "8FQNn__l3I9F"
       }
     }
   ]
