--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/1V8lvJl4DmZPbxwTwEtg",
+      "authorship_tag": "ABX9TyOxzW9N1ERoXcMjoJBdO+6y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,9 +47,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ----------------------------------------------------\n",
-        "# Section 1 - Dataset\n",
-        "# ----------------------------------------------------"
+        "\n",
+        "# Section 1 - Dataset"
       ],
       "metadata": {
         "id": "5iiLHysUH-ZS"
@@ -1491,10 +1490,26 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Section 4: Evaluation"
+      ],
+      "metadata": {
+        "id": "t3xN6Jm2DHME"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "_PYqKCSxDPC4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "r1zyT4kECLmE"
+        "id": "j1mWL1w9DPVe"
       },
       "execution_count": null,
       "outputs": []
