some cleaning up

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOg5SFarT+hgY9dOFqvaSUy",
+      "authorship_tag": "ABX9TyOL4xi4gfnRItjd1Hx/aj4q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1427,7 +1427,7 @@
         "\n",
         "Dimensionality reduction for visualisation. TF-IDF is sparse and high-dimensional, so we use Truncated SVD (latent semantic analysis) to project vectors into 2D for plotting cluster structure.\n",
         "\n",
-        "Unlike PCA on dense matrices, Truncated SVD works directly on sparse inputs and preserves linear structure that often reveals topical groups. The 2D projection is used only for visual diagnostics; clustering itself is performed in the original TF-IDF space to retain information.\n",
+        "Truncated SVD works directly on sparse inputs and preserves linear structure that often reveals topical groups. This 2D projection is used only for visual diagnostics; clustering itself is performed in the original TF-IDF space to retain information.\n",
         "\n"
       ],
       "metadata": {
