section 2 edit done

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMkZcx8r7gaDJLuldgP/w8A",
+      "authorship_tag": "ABX9TyN6y+Ow8PDI0TWgEFG3nyBm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4961,18 +4961,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Representation Learning\n",
+        "## Overview\n",
         "\n",
-        "To perform clustering, the cleaned product titles must be converted into numeric vectors that capture word importance.  \n",
-        "Here the **TF-IDF (Term Frequency - Inverse Document Frequency)** method is used.  \n",
-        "TF-IDF assigns higher values to words that appear frequently within one title but are less common across the dataset.  \n",
-        "This helps emphasise unique identifiers such as brand and model numbers while reducing the weight of very common terms.\n",
+        "To apply clustering algorithms, the cleaned product titles must be converted into numerical vectors. This study uses Term Frequency-Inverse Document Frequency (TF-IDF), a widely used method for measuring how important a word is within a document relative to the entire collection. TF-IDF is particularly effective for short text such as product titles, where distinctive terms (e.g., model numbers or brand identifiers) carry strong discriminative value.\n",
         "\n",
-        "TF-IDF is efficient and interpretable for short text, making it suitable for grouping similar products.  \n",
-        "Each product title becomes a sparse vector representing the strength of its key tokens.  \n",
-        "These vectors form the numerical feature space on which unsupervised algorithms—such as *k-means*—can measure distance and identify clusters.  \n",
+        "Using `TfidfVectorizer`, each title is transformed into a sparse vector limited to the 5,000 most informative terms. This dimensionality cap improves efficiency while retaining the vocabulary necessary to distinguish similar products. The resulting matrix forms the feature space for clustering, where distance between vectors approximates textual similarity.\n",
         "\n",
-        "In clustering we need numeric features to compare similarity. TF-IDF converts cleaned text into numeric vectors showing how important each word is across all product titles and this what I have applied to the the Clean Titke below.\n"
+        "In clustering we need numeric features to compare similarity. TF-IDF accomplishes this, converting cleaned text into numeric vectors showing how important each word is across all product titles and I have applied this to the the Clean Title below."
       ],
       "metadata": {
         "id": "GwX-OpiSLe4G"
