conclusion, references added to conclude the study

--- a/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
+++ b/2113122_CEM300_Natural_Language_Processing_Coursework.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN6y+Ow8PDI0TWgEFG3nyBm",
+      "authorship_tag": "ABX9TyOKRtTrqIgzNcyFr0IAoIPK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5308,13 +5308,13 @@
       "source": [
         "## Evaluation Results\n",
         "\n",
-        "Both K-Means and Agglomerative clustering were evaluated using two internal metrics: the **Silhouette coefficient** and the **Davies-Bouldin (DB) index**.\n",
+        "Both baseline models were evaluated using internal clustering metrics: the Silhouette coefficient and the Davies-Bouldin (DB) index. These metrics were selected because the dataset contains no ground-truth labels, making external evaluation measures such as accuracy or purity inappropriate.\n",
         "\n",
-        "The Silhouette score measured how well each product title fits within its assigned cluster compared to others, where higher values indicate better separation. The DB index assesses the average similarity between clusters, with lower values representing tighter, more distinct groupings.\n",
+        "The Silhouette score assesses how well items match their assigned cluster compared to surrounding clusters, with higher values indicating clearer separation. The DB index measures average cluster similarity, where lower values correspond to more compact and distinct clusters.\n",
         "\n",
-        "K-Means achieved a Silhouette score of **0.074** and a DB index of **4.176**, while the Agglomerative model produced **0.026** and **3.002**, respectively. Although the absolute scores are low, suggesting overlap between product titles due to repeated brand and model terms, K-Means provided marginally clearer separation between clusters. Agglomerative clustering produced smaller, more compact groups (reflected in its lower DB value) but with weaker overall distinction between them.\n",
+        "K-Means achieved a Silhouette score of **0.074** and a DB index of **4.176**, while Agglomerative Clustering produced scores of **0.026** and **3.002**, respectively. These values indicate limited separation between clusters, which is expected for short, repetitive product titles where many items share brand or model keywords. K-Means offered slightly better separation, whereas hierarchical clustering produced marginally tighter clusters.\n",
         "\n",
-        "These results are consistent with the characteristics of a short, noisy text such as product titles, where similar wording limits cluster separation. Overall, both algorithms performed reasonably given the data structure, with **K-Means** offering slightly better balance between compactness and separation."
+        "Despite their modest performance, these results provide a meaningful baseline for comparison with the SBERT model introduced later."
       ],
       "metadata": {
         "id": "_PYqKCSxDPC4"
@@ -5336,7 +5336,10 @@
         "\n",
         "To address this, the paper proposes Sentence-BERT (SBERT), a Siamese and triplet network architecture that fine-tunes BERT to produce fixed-size sentence embeddings optimised for cosine similarity. By training the network with contrastive and triplet loss functions, SBERT learns to map semantically similar sentences closer together in vector space while pushing dissimilar ones apart. This modification enables rapid pairwise comparison, making SBERT up to 100 times faster than standard BERT for similarity tasks.\n",
         "\n",
-        "The paper demonstrates substantial improvements over traditional representations such as TF-IDF, average word embeddings, and vanilla BERT on tasks including clustering, semantic search, and paraphrase detection. SBERT therefore provides a powerful, scalable method for generating high-quality semantic embeddings applicable to a wide range of NLP applications.\n"
+        "The paper demonstrates substantial improvements over traditional representations such as TF-IDF, average word embeddings, and vanilla BERT on tasks including clustering, semantic search, and paraphrase detection. SBERT therefore provides a powerful, scalable method for generating high-quality semantic embeddings applicable to a wide range of NLP applications.\n",
+        "\n",
+        "In the context of this coursework, SBERT is relevant because product titles often contain paraphrastic or similar expressions semantically that cannot be fully captured using TF-IDF alone. By embedding titles into a semantic vector space, SBERT provides a richer representation that is well suited for clustering tasks involving subtle textual differences.\n",
+        "\n"
       ],
       "metadata": {
         "id": "iwPq6ESFqpeL"
@@ -5702,6 +5705,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "*(Note: `show_progress_bar=False` is used to avoid storing widget metadata in the notebook, which can cause rendering issues on GitHub.)*"
+      ],
+      "metadata": {
+        "id": "wVXzWot3CmKL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Task 6.2: Evaluation of SBERT Clustering\n",
         "\n",
         "* Using the same internal metrics (Silhouette and Davies-Bouldin) to compare SBERT performance against TF-IDF baselines."
@@ -5715,20 +5727,20 @@
       "source": [
         "from sklearn.metrics import silhouette_score, davies_bouldin_score\n",
         "\n",
-        "sil_sbert = silhouette_score(sbert_embeddings, sbert_labels, metric=\"cosine\")\n",
-        "db_sbert  = davies_bouldin_score(sbert_embeddings, sbert_labels)\n",
+        "sil_sbert_score = silhouette_score(sbert_embeddings, sbert_labels, metric=\"cosine\")\n",
+        "db_sbert_score  = davies_bouldin_score(sbert_embeddings, sbert_labels)\n",
         "\n",
-        "print(f\"SBERT Silhouette: {sil_sbert:.3f}\")\n",
-        "print(f\"SBERT Davies–Bouldin: {db_sbert:.3f}\")\n"
+        "print(f\"SBERT Silhouette: {sil_sbert_score:.3f}\")\n",
+        "print(f\"SBERT Davies–Bouldin: {db_sbert_score:.3f}\")\n"
       ],
       "metadata": {
         "id": "JYG2GJBiwkhK",
-        "outputId": "b25204a6-719d-4893-8f5b-0acba44f3642",
+        "outputId": "dfbc2cce-c229-410d-e166-ecab24fb2907",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -5767,12 +5779,30 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Section 8 - Conclusion\n",
+        "\n",
+        "This study explored unsupervised clustering of product titles using both traditional NLP representations and a modern sentence-embedding model. TF-IDF provided a strong and interpretable baseline, enabling K-Means and Agglomerative Clustering to form groups based on shared lexical patterns. However, the baseline models were limited by the shallow nature of TF-IDF, resulting in modest cluster separation.\n",
+        "\n",
+        "Implementing the SBERT model introduced in the selected paper demonstrated clear benefits. SBERT embeddings improved both the Silhouette score and Davies-Bouldin index, confirming that semantic representations capture deeper relationships between product titles than surface-level word overlap. Although the evaluation differs from the SentEval benchmarks used in the paper—due to the absence of labelled ground truth—the internal metrics still show SBERT's superiority for this dataset.\n",
+        "\n",
+        "Overall, the comparative study highlights the value of pretrained language models for real world clustering tasks and demonstrates how modern NLP techniques can enhance the organisation and analysis of unstructured product data.\n"
+      ],
+      "metadata": {
+        "id": "ByseXeWDBYGW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# References\n",
         "\n",
+        "1. Reimers, N., & Gurevych, I. (2019). *Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks*. EMNLP-IJCNLP.\n",
         "\n",
-        "1.   List item\n",
-        "2.   https://arxiv.org/abs/1908.10084\n",
-        "\n"
+        "2. Ramos, J. (2003). *Using TF-IDF to Determine Word Relevance in Document Queries*.\n",
+        "\n",
+        "3. MacQueen, J. (1967). *Some Methods for Classification and Analysis of Multivariate Observations*. In Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability.\n",
+        "\n",
+        "4. Sneath, P. H., & Sokal, R. R. (1973). *Numerical Taxonomy*. W. H. Freeman."
       ],
       "metadata": {
         "id": "pfOoNIelxE7E"
